# stencilbox

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Human_AI_Team_Agreement.md  README.md
.agent/workflows/: sod-to-roadmap.md
.claude/: settings.local.json
.github/: copilot-instructions.md
bootstrap/: PROCESS.md
code/: README.md
discovery/: PROCESS.md  problem_statement.md
docs/: PROCESS.md
docs/templates/: adr.md  backlog.md  requirements.md
home/code/: coding-human-ai-team-agreement.md
home/images/: Image_Human_AI_Team_Agreement.md  image-human-ai-team-agreement.md
home/learning/: learning-human-ai-team-agreement.md
home/writing/: writing-human-ai-team-agreement.md
html/: index.html
images/: Image_Human_AI_Team_Agreement.md
python-cli-scaffold/: Human_AI_Team_Agreement.md  guard-rails-prompt.md  notes.md
shared/: file-naming-conventions.md
shared/agreements/: human-ai-team-agreement.md
shared/frameworks/: interview-questions.md
tests/: test_stencil.py
tmp_test/: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
tmp_test/src/my_test_tool/: __init__.py  cli.py
tmp_test/src/my_test_tool/application/: __init__.py
tmp_test/src/my_test_tool/domain/: __init__.py
tmp_test/src/my_test_tool/infrastructure/: __init__.py
tmp_test/tests/: conftest.py
tmp_test/tests/unit/: test_cli.py
work/code/: README.md  WORK_ENVIRONMENT.md
work/project-planning/: FILE_GUIDE.md  QUICKSTART.md  README.md  RESOURCES.md  SOD.md  TEST_SCENARIO.md  (+2 more)
writing/: Writing_Human_AI_Team_Agreement.md
(+58 files in other folders)
